tests/type-check/bad/cases-on-number.arr

a = 5
cases(Number) a:
  | else => true
end
